[workspace]
members = ["hyve-db", "hyve-db-server"]
default-members = ["hyve-db-server"]
resolver = "2"

[workspace.dependencies]
cbor4ii = { version = "1.0.0", features = ["serde1"] }
derive-where = "1.3.0"
futures = { version = "0.3.31", default-features = false }
hyve-db = { path = "./hyve-db" }
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", default-features = false, features = [
    "fs",
    "macros",
    "sync",
    "time",
] }
tokio-util = { version = "0.7.15", default-features = false }
tracing = "0.1.41"
