[package]
name = "hyve-db-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
cbor4ii = { workspace = true }
clap = { version = "4.5.37", features = ["derive"] }
clap-num = "1.2.0"
derive-where = { workspace = true }
futures = { workspace = true }
humantime = "2.2.0"
hyve-db = { workspace = true }
mur3 = "0.1.0"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
rusqlite = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
ulid = "1.2.1"
